tests/rosetta/out/C/angle-difference-between-two-bearings-2.error
cc: exit status 1
/tmp/angle-difference-between-two-bearings-2.c: In function ‘angleDiff’:
/tmp/angle-difference-between-two-bearings-2.c:50:17: error: invalid operands to binary % (have ‘double’ and ‘double’)
   50 |   return ((diff % 360.0 + 360.0 + 180.0) % 360.0) - 180.0;
      |                 ^
/tmp/angle-difference-between-two-bearings-2.c: In function ‘_mochi_main’:
/tmp/angle-difference-between-two-bearings-2.c:60:12: error: redefinition of ‘testCases’
   60 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:57:12: note: previous definition of ‘testCases’ with type ‘list_int’
   57 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:63:12: error: redefinition of ‘testCases’
   63 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:60:12: note: previous definition of ‘testCases’ with type ‘list_int’
   60 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:66:12: error: redefinition of ‘testCases’
   66 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:63:12: note: previous definition of ‘testCases’ with type ‘list_int’
   63 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:69:12: error: redefinition of ‘testCases’
   69 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:66:12: note: previous definition of ‘testCases’ with type ‘list_int’
   66 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:72:14: error: conflicting types for ‘testCases’; have ‘list_float’
   72 |   list_float testCases = list_float_create(2);
      |              ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:69:12: note: previous definition of ‘testCases’ with type ‘list_int’
   69 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:75:12: error: conflicting types for ‘testCases’; have ‘list_int’
   75 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:72:14: note: previous definition of ‘testCases’ with type ‘list_float’
   72 |   list_float testCases = list_float_create(2);
      |              ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:78:12: error: redefinition of ‘testCases’
   78 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:75:12: note: previous definition of ‘testCases’ with type ‘list_int’
   75 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:81:12: error: redefinition of ‘testCases’
   81 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:78:12: note: previous definition of ‘testCases’ with type ‘list_int’
   78 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:84:14: error: conflicting types for ‘testCases’; have ‘list_float’
   84 |   list_float testCases = list_float_create(2);
      |              ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:81:12: note: previous definition of ‘testCases’ with type ‘list_int’
   81 |   list_int testCases = list_int_create(2);
      |            ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:90:32: error: incompatible types when initializing type ‘int’ using type ‘list_float’
   90 |   list_int testCases_data[] = {tmp1,      testCases, testCases, testCases,
      |                                ^~~~
/tmp/angle-difference-between-two-bearings-2.c:90:43: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
   90 |   list_int testCases_data[] = {tmp1,      testCases, testCases, testCases,
      |                                           ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:90:54: error: incompatible types when initializing type ‘int’ using type ‘list_float’
   90 |   list_int testCases_data[] = {tmp1,      testCases, testCases, testCases,
      |                                                      ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:90:65: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
   90 |   list_int testCases_data[] = {tmp1,      testCases, testCases, testCases,
      |                                                                 ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:91:32: error: incompatible types when initializing type ‘int’ using type ‘list_float’
   91 |                                testCases, testCases, testCases, testCases,
      |                                ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:91:43: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
   91 |                                testCases, testCases, testCases, testCases,
      |                                           ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:91:54: error: incompatible types when initializing type ‘int’ using type ‘list_float’
   91 |                                testCases, testCases, testCases, testCases,
      |                                                      ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:91:65: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
   91 |                                testCases, testCases, testCases, testCases,
      |                                                                 ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:92:32: error: incompatible types when initializing type ‘int’ using type ‘list_float’
   92 |                                testCases, testCases, testCases, tmp2};
      |                                ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:92:43: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
   92 |                                testCases, testCases, testCases, tmp2};
      |                                           ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:92:54: error: incompatible types when initializing type ‘int’ using type ‘list_float’
   92 |                                testCases, testCases, testCases, tmp2};
      |                                                      ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:92:65: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
   92 |                                testCases, testCases, testCases, tmp2};
      |                                                                 ^~~~
/tmp/angle-difference-between-two-bearings-2.c:93:17: error: conflicting types for ‘testCases’; have ‘list_list_int’
   93 |   list_list_int testCases = {12, testCases_data};
      |                 ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:84:14: note: previous definition of ‘testCases’ with type ‘list_float’
   84 |   list_float testCases = list_float_create(2);
      |              ^~~~~~~~~
/tmp/angle-difference-between-two-bearings-2.c:95:21: error: invalid initializer
   95 |     list_float tc = testCases.data[tmp3];
      |                     ^~~~~~~~~
