tests/rosetta/out/C/angle-difference-between-two-bearings-2.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:43Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:43Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
double angleDiff(double b1, double b2) {
  double diff = b2 - b1;
  return ((diff % 360.0 + 360.0 + 180.0) % 360.0) - 180.0;
}

int _mochi_main() {
  list_float tmp1 = list_float_create(2);
  tmp1.data[0] = 20.0;
  tmp1.data[1] = 45.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 45.0;
  testCases.data[1] = 45.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 85.0;
  testCases.data[1] = 90.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 95.0;
  testCases.data[1] = 90.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 45.0;
  testCases.data[1] = 125.0;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 45.0;
  testCases.data[1] = 145.0;
  list_float testCases = list_float_create(2);
  testCases.data[0] = 29.4803;
  testCases.data[1] = 0 - 88.6381;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 78.3251;
  testCases.data[1] = 0 - 159.036;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 70099.74233810938;
  testCases.data[1] = 29840.67437876723;
  list_int testCases = list_int_create(2);
  testCases.data[0] = 0 - 165313.6666297357;
  testCases.data[1] = 33693.9894517456;
  list_float testCases = list_float_create(2);
  testCases.data[0] = 1174.8380510598456;
  testCases.data[1] = 0 - 154146.66490124757;
  list_float tmp2 = list_float_create(2);
  tmp2.data[0] = 60175.77306795546;
  tmp2.data[1] = 42213.07192354373;
  list_int testCases_data[] = {tmp1,      testCases, testCases, testCases,
                               testCases, testCases, testCases, testCases,
                               testCases, testCases, testCases, tmp2};
  list_list_int testCases = {12, testCases_data};
  for (int tmp3 = 0; tmp3 < 2; tmp3++) {
    list_float tc = testCases.data[tmp3];
    printf("%.17g\n", angleDiff(tc.data[0], tc.data[1]));
  }
  return 0;
}
int main() { return _mochi_main(); }
